[tool.poetry]
name = "solvent"
version = "0.1.0"
description = ""
authors = ["Nathan Taylor <ntaylor@cs.utexas.edu>", "Samuel Thomas <sgt@cs.utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
z3-solver = "4.12.1.0"
pytest = "7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
jupyter = "^1.0.0"
rise = "^5.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["solvent"]

[tool.isort]
profile = "black"