[tool.poetry]
name = "solvent"
version = "0.1.0"
description = ""
authors = ["Nathan Taylor <ntaylor@cs.utexas.edu>", "Samuel Thomas <sgt@cs.utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
z3-solver = "4.12.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
jupyter = "^1.0.0"
rise = "^5.7.1"
pyright = "^1.1.305"
isort = "^5.12.0"
pre-commit = "^3.2.2"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:pkg_resources is deprecated as an API',
]

[tool.black]
line-length = 88

[tool.pyright]
include = ["solvent", "tests"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
per-file-ignores = [
    '__init__.py:F401',
]
